add auto delete events / clear history / fix some bugs/ add settings menu

--- a/src/app/TimeManager/page/i18n/ru-RU.po
+++ b/src/app/TimeManager/page/i18n/ru-RU.po
@@ -40,3 +40,31 @@ msgstr "Начало события"
 msgid "Event end"
 msgstr "Окончание события"
 
+
+msgid "Clear history"
+msgstr "Очистить историю"
+
+
+msgid "Auto delete"
+msgstr "Авто удаление"
+
+msgid "Never"
+msgstr "Никогда"
+
+msgid "Older than day"
+msgstr "Старше одного дня"
+
+msgid "Older than week"
+msgstr "Старше недели"
+
+msgid "Older than month"
+msgstr "Старше месяца"
+
+msgid "Submit"
+msgstr "Подтвердить"
+
+msgid "Delete events:"
+msgstr "Удалять события:"
+
+msgid "Attention! Some events can be deleted!"
+msgstr "Внимание! Некоторые события могут быть удалены!"
